--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Staatliches&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
-    <link href="/open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Taskmaster Pro</title>
@@ -28,13 +27,13 @@
         <h1 class="text-center"><img class="icon-check d-inline d-lg-none" src="https://img.icons8.com/material-outlined/96/000000/task-completed.png"/>Taskmaster Pro Edition</h1>
         <button
           id="create-task"
-          class="btn btn-block btn-success"
+          class="btn btn-block btn-add"
           data-toggle="modal"
           data-target="#task-form-modal"
         >
         <img class="icon-img" src="https://img.icons8.com/ios-glyphs/30/000000/plus-math.png"/> Add Task
         </button>
-        <button id="remove-tasks" class="btn btn-block btn-danger">
+        <button id="remove-tasks" class="btn btn-block btn-delete">
           <img class="icon-img" src="https://img.icons8.com/fluency-systems-filled/48/000000/delete.png"/> Delete All Tasks
         </button>
         <img class="icon-check-big mt-auto d-none d-lg-block" src="https://img.icons8.com/material-outlined/96/000000/task-completed.png"/>
@@ -79,9 +78,9 @@
           </div>
           <!-- done end -->
         </div>
-        <div id="trash" class="mt-auto">
-          <div class="w-100 bg-danger p-3 text-center text-light display-4">
-            <img src="https://img.icons8.com/fluency-systems-filled/48/000000/delete.png"/> Drop Here to Remove.
+        <div id="trash" class="overflow-hidden mt-auto">
+          <div class="bottom-trash w-100 p-3 text-center">
+            <img class="mx-auto mb-4" src="https://img.icons8.com/fluency-systems-filled/48/000000/delete.png"/> Drop Here to Remove.
           </div>
         </div>
       </main>
@@ -130,12 +129,12 @@
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-secondary"
+              class="btn btn-close"
               data-dismiss="modal"
             >
               Close
             </button>
-            <button type="button" class="btn btn-primary">Save Task</button>
+            <button type="button" class="btn btn-save">Save Task</button>
           </div>
         </div>
       </div>
